--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
 <body>
 
-    <div class="clock-container"></div>
+    <div class="clock-container">
+        <span id="hours">00</span> : 
+        <span id="minutes">00</span> : 
+        <span id="seconds">00</span>
+    </div>
     
-    <script src="app.js" ></script>
+    <script src="app.js" defer></script>
 </body>
 </html>
